fixed view on mobile

--- a/game/main.css
+++ b/game/main.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .game-controls {
@@ -25,6 +26,8 @@ body {
     align-items: center;
     gap: 1rem;
     text-align: center;
+    box-sizing: border-box;
+    flex-wrap: wrap;
 }
 
 .game-status {
@@ -52,5 +55,9 @@ button {
     border-radius: 14px;
 }
 
-
-
+h1 {
+    white-space: nowrap;
+    width: 100%;
+    text-align: center;
+    font-size: 7vw;
+}
